--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
+  author    = {Jiaxing KANG},
+  title     = {Jiaxing KANG: About me},
   journal   = {ICCV},
   year      = {2021},
 }</code></pre>
