--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Child Jiaxing KANG, The most handsome man in the world</h1>
+          <h1 class="title is-1 publication-title">Child 02!! Jiaxing KANG, The most handsome man in the world</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://keunhong.com">Xiaoyun ZHENG</a><sup>1</sup>,</span>
